Kubernetes/twitter-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: twitter-depl
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: twitter
  template:
    metadata:
      labels:
        app: twitter
    spec:
      containers:
        - name: twitter-post-service
          image: nickvgdev/twitter-post-service:latest
        - name: twitter-fetch-service
          image: nickvgdev/twitter-fetch-service:latest
        - name: twitter-rabbit
          image: rabbitmq:3-management
