Kubernetes/twitter-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: twitter-np-srv
spec:
  type: NodePort
  selector:
    app: twitter-fetch
  ports:
    - name: fetch
      protocol: TCP
      port: 80
      targetPort: 80
