Kubernetes/twitter-post-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: twitter-post-depl
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: twitter-post
  template:
    metadata:
      labels:
        app: twitter-post
    spec:
      containers:
        - name: twitter-post-service
          image: nickvgdev/twitter-post-service:latest
---
apiVersion: v1
kind: Service
metadata:
  name: twitter-post-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: twitter-post
  ports:
    - name: post
      protocol: TCP
      port: 80
      targetPort: 80
