Kubernetes/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: twitterbutcooler.com
      http:
        paths:
          - path: /api/post
            pathType: Prefix
            backend:
              service:
                name: twitter-post-clusterip-srv
                port:
                  number: 80
          - path: /api/fetch
            pathType: Prefix
            backend:
              service:
                name: twitter-fetch-clusterip-srv
                port:
                  number: 80
